--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -1,74 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<BorderPane xmlns="http://javafx.com/javafx/17.0.12"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
+    <!-- CENTER: Map + Enemies -->
     <center>
         <StackPane>
-            <GridPane fx:id="mapGridPane" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
+            <GridPane fx:id="mapGridPane"
+                      gridLinesVisible="true"
+                      prefHeight="768.0"
+                      prefWidth="1024.0">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
                 </rowConstraints>
             </GridPane>
-            <Pane fx:id="enemyLayer" pickOnBounds="false" />
+            <Pane fx:id="enemyLayer" pickOnBounds="false"/>
         </StackPane>
     </center>
+
+    <!-- RIGHT: Controls + HUD -->
     <right>
-        <VBox alignment="TOP_CENTER" prefWidth="256.0" spacing="10" BorderPane.alignment="CENTER">
+        <VBox alignment="TOP_CENTER" spacing="10" prefWidth="256.0" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="pauseButton" text="Pause" />
-                <Button fx:id="restartButton" text="Restart" />
-                <Button fx:id="exitButton" text="Exit" />
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Pane prefHeight="24.0" prefWidth="24.0" />
-                    <ImageView fx:id="healthIcon" fitHeight="24" fitWidth="24" />
-                    <Label fx:id="healthLabel" text="100" />
-                </HBox>
+                <!-- Control Buttons -->
+                <Button fx:id="pauseButton"   text="Pause"/>
+                <Button fx:id="restartButton" text="Restart"/>
+                <Button fx:id="speedButton"   text="1x"/>
+                <Button fx:id="exitButton"    text="Exit"/>
 
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Pane prefHeight="24.0" prefWidth="24.0" />
-                    <ImageView fx:id="goldIcon" fitHeight="24" fitWidth="24" />
-                    <Label fx:id="goldLabel" text="500" />
-                </HBox>
+                <!-- HUD Overlay -->
+                <!-- GOLD -->
+                <StackPane>
+                    <ImageView fx:id="goldFrame"
+                               image="@../ui/images/gold_frame.png"
+                               fitWidth="200" preserveRatio="true"/>
+                    <HBox alignment="CENTER" spacing="8">
+                        <ImageView fx:id="goldIcon"
+                                   image="@../ui/images/coin_icon.png"
+                                   fitHeight="24" preserveRatio="true"/>
+                        <Label fx:id="goldLabel"
+                               text="1230"
+                               style="-fx-font-size:18px; -fx-text-fill:white;"/>
+                    </HBox>
+                </StackPane>
 
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Pane prefHeight="24.0" prefWidth="24.0" />
-                    <ImageView fx:id="waveIcon" fitHeight="24" fitWidth="24" />
-                    <Label fx:id="waveLabel" text="1/10" />
-                </HBox>
+                <!-- HEALTH -->
+                <StackPane>
+                    <ImageView fx:id="healthFrame"
+                               image="@../ui/images/health_frame.png"
+                               fitWidth="200" preserveRatio="true"/>
+                    <HBox alignment="CENTER" spacing="8">
+                        <ImageView fx:id="healthIcon"
+                                   image="@../ui/images/heart_icon.png"
+                                   fitHeight="24" preserveRatio="true"/>
+                        <Label fx:id="healthLabel"
+                               text="10/10"
+                               style="-fx-font-size:18px; -fx-text-fill:white;"/>
+                    </HBox>
+                </StackPane>
 
+                <!-- WAVE -->
+                <StackPane>
+                    <ImageView fx:id="waveFrame"
+                               image="@../ui/images/wave_frame.png"
+                               fitWidth="200" preserveRatio="true"/>
+                    <HBox alignment="CENTER" spacing="8">
+                        <ImageView fx:id="waveIcon"
+                                   image="@../ui/images/shield_icon.png"
+                                   fitHeight="24" preserveRatio="true"/>
+                        <Label fx:id="waveLabel"
+                               text="10/25"
+                               style="-fx-font-size:18px; -fx-text-fill:white;"/>
+                    </HBox>
+                </StackPane>
             </children>
         </VBox>
     </right>
+
 </BorderPane>
