--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -2,6 +2,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,108 +17,97 @@
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.canja.kutowerdefence.ui.GamePlayView">
 
-    <!-- CENTER: Map + Enemies -->
-    <center>
+  <!-- CENTER: Map + Enemies -->
+  <center>
+    <StackPane>
+      <GridPane fx:id="mapGridPane"
+                gridLinesVisible="true"
+                prefHeight="768.0"
+                prefWidth="1024.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
+          <!-- repeat ColumnConstraints as needed... -->
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
+          <!-- repeat RowConstraints as needed... -->
+        </rowConstraints>
+      </GridPane>
+      <Pane fx:id="enemyLayer" pickOnBounds="false"/>
+    </StackPane>
+  </center>
+
+  <!-- RIGHT: Controls + HUD -->
+  <right>
+    <VBox alignment="TOP_CENTER" spacing="10" prefWidth="256.0" BorderPane.alignment="CENTER">
+      <children>
+        <!-- Control Buttons -->
+        <Button fx:id="pauseButton"   text="Pause"/>
+        <Button fx:id="restartButton" text="Restart"/>
+        <Button fx:id="speedButton"   text="1x"/>
+        <Button fx:id="exitButton"    text="Exit"/>
+
+        <!-- HUD Overlay -->
+
+        <!-- GOLD -->
         <StackPane>
-            <GridPane fx:id="mapGridPane"
-                      gridLinesVisible="true"
-                      prefHeight="768.0"
-                      prefWidth="1024.0">
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES"/>
-                </rowConstraints>
-            </GridPane>
-            <Pane fx:id="enemyLayer" pickOnBounds="false"/>
+          <ImageView fx:id="goldFrame" fitWidth="200" preserveRatio="true">
+            <image>
+              <Image url="@../ui/images/gold_frame.png"/>
+            </image>
+          </ImageView>
+          <HBox alignment="CENTER" spacing="8">
+            <ImageView fx:id="goldIcon" fitHeight="24" preserveRatio="true">
+              <image>
+                <Image url="@../ui/images/coin_icon.png"/>
+              </image>
+            </ImageView>
+            <Label fx:id="goldLabel"
+                   text="0"
+                   style="-fx-font-size:18px; -fx-text-fill:white;"/>
+          </HBox>
         </StackPane>
-    </center>
 
-    <!-- RIGHT: Controls + HUD -->
-    <right>
-        <VBox alignment="TOP_CENTER" spacing="10" prefWidth="256.0" BorderPane.alignment="CENTER">
-            <children>
-                <!-- Control Buttons -->
-                <Button fx:id="pauseButton"   text="Pause"/>
-                <Button fx:id="restartButton" text="Restart"/>
-                <Button fx:id="speedButton"   text="1x"/>
-                <Button fx:id="exitButton"    text="Exit"/>
+        <!-- HEALTH -->
+        <StackPane>
+          <ImageView fx:id="healthFrame" fitWidth="200" preserveRatio="true">
+            <image>
+              <Image url="@../ui/images/health_frame.png"/>
+            </image>
+          </ImageView>
+          <HBox alignment="CENTER" spacing="8">
+            <ImageView fx:id="heartIcon" fitHeight="24" preserveRatio="true">
+              <image>
+                <Image url="@../ui/images/heart_icon.png"/>
+              </image>
+            </ImageView>
+            <Label fx:id="healthLabel"
+                   text="0/0"
+                   style="-fx-font-size:18px; -fx-text-fill:white;"/>
+          </HBox>
+        </StackPane>
 
-                <!-- HUD Overlay -->
-                <!-- GOLD -->
-                <StackPane>
-                    <ImageView fx:id="goldFrame"
-                               image="@../ui/images/gold_frame.png"
-                               fitWidth="200" preserveRatio="true"/>
-                    <HBox alignment="CENTER" spacing="8">
-                        <ImageView fx:id="goldIcon"
-                                   image="@../ui/images/coin_icon.png"
-                                   fitHeight="24" preserveRatio="true"/>
-                        <Label fx:id="goldLabel"
-                               text="1230"
-                               style="-fx-font-size:18px; -fx-text-fill:white;"/>
-                    </HBox>
-                </StackPane>
+        <!-- WAVE -->
+        <StackPane>
+          <ImageView fx:id="waveFrame" fitWidth="200" preserveRatio="true">
+            <image>
+              <Image url="@../ui/images/wave_frame.png"/>
+            </image>
+          </ImageView>
+          <HBox alignment="CENTER" spacing="8">
+            <ImageView fx:id="shieldIcon" fitHeight="24" preserveRatio="true">
+              <image>
+                <Image url="@../ui/images/shield_icon.png"/>
+              </image>
+            </ImageView>
+            <Label fx:id="waveLabel"
+                   text="0/0"
+                   style="-fx-font-size:18px; -fx-text-fill:white;"/>
+          </HBox>
+        </StackPane>
 
-                <!-- HEALTH -->
-                <StackPane>
-                    <ImageView fx:id="healthFrame"
-                               image="@../ui/images/health_frame.png"
-                               fitWidth="200" preserveRatio="true"/>
-                    <HBox alignment="CENTER" spacing="8">
-                        <ImageView fx:id="healthIcon"
-                                   image="@../ui/images/heart_icon.png"
-                                   fitHeight="24" preserveRatio="true"/>
-                        <Label fx:id="healthLabel"
-                               text="10/10"
-                               style="-fx-font-size:18px; -fx-text-fill:white;"/>
-                    </HBox>
-                </StackPane>
-
-                <!-- WAVE -->
-                <StackPane>
-                    <ImageView fx:id="waveFrame"
-                               image="@../ui/images/wave_frame.png"
-                               fitWidth="200" preserveRatio="true"/>
-                    <HBox alignment="CENTER" spacing="8">
-                        <ImageView fx:id="waveIcon"
-                                   image="@../ui/images/shield_icon.png"
-                                   fitHeight="24" preserveRatio="true"/>
-                        <Label fx:id="waveLabel"
-                               text="10/25"
-                               style="-fx-font-size:18px; -fx-text-fill:white;"/>
-                    </HBox>
-                </StackPane>
-            </children>
-        </VBox>
-    </right>
+      </children>
+    </VBox>
+  </right>
 
 </BorderPane>
